Fixed main button on mobile

--- a/client/app/main/main.scss
+++ b/client/app/main/main.scss
@@ -32,5 +32,9 @@
   }
 }
 .signup--button {
-  margin: 15px;
+  margin-bottom: 20px;
+}
+.signup-hero-button {
+  display: block;
+  white-space: normal;
 }
